# stack_only_neural_network

./: CMakeLists.txt  README.md
dataset/: images_test  images_train  label_train  labels_test
mnist-master/: .clang-format
mnist-master/example/: CMakeLists.txt  main.cpp
mnist-master/include/mnist/: mnist_reader.hpp  mnist_reader_common.hpp  mnist_reader_less.hpp  mnist_utils.hpp
src/: DLayer.cpp  DLayer.h  DNetwork.cpp  DNetwork.h  DeltaNetwork.cpp  DeltaNetwork.h  GenePool.cpp  GenePool.h  Matrix.cpp  Matrix.h  NeuralNetwork.cpp  NeuralNetwork.h  NeuralNetworkBase.cpp  NeuralNetworkBase.h  NeuralNetworkBpg.cpp  NeuralNetworkBpg.h  NeuralNetworkInside.cpp  NeuralNetworkInside.h  NeuralNetworkInsideBpg.h  RecTuple.cpp  RecTuple.h  main.cpp  main2.cpp  relevant_math.cpp  relevant_math.h  unit_test.cpp
